--- a/TMS/TMS/Areas/Admin/Views/ManageUser/Admin.cshtml
+++ b/TMS/TMS/Areas/Admin/Views/ManageUser/Admin.cshtml
@@ -75,7 +75,7 @@
                     {
                         "targets": [0],
                         "render": function (data, type, row) {
-                            return "";
+                            return row[1];
                         }
                     },
                     {
