Thy: Requester create ticket

--- a/TMS/TMS/Areas/Technician/Views/ManageTicket/Index.cshtml
+++ b/TMS/TMS/Areas/Technician/Views/ManageTicket/Index.cshtml
@@ -295,7 +295,7 @@
                     },
                     {
                         "render": function (data, type, row) {
-                            return row[3] == null ? "None" : "<span class='pre-wrap'>" + row[3] + "</span>";
+                            return row[3] == null ? "None" : "<span class='pre-wrap'>" + (row[3]) + "</span>";
                         },
                         "sortable": false,
                         "targets": 3
