--- a/TMS/TMS/Areas/Technician/Views/ManageTicket/Solve.cshtml
+++ b/TMS/TMS/Areas/Technician/Views/ManageTicket/Solve.cshtml
@@ -207,7 +207,7 @@
                     <div class="col-sm-2 labels">
                         <b>Description: </b>
                     </div>
-                    <div class="col-sm-10 pre-wrap">@Html.DisplayFor(model => model.Description)</div>
+                    <div class="col-sm-10 pre-wrap">@Html.Raw(Model.Description)</div>
                 </div>
             </div>
             <div class="col-sm-12 row-content ">
