--- a/TMS/TMS/Views/Ticket/Create.cshtml
+++ b/TMS/TMS/Views/Ticket/Create.cshtml
@@ -1,7 +1,7 @@
 ﻿@{
     Layout = "~/Views/Shared/TMSRequesterLayout.cshtml";
 }
-@model TMS.ViewModels.NewTicketViewModel
+@model TMS.ViewModels.RequesterTicketViewModel
 
 <style>
     .title {
@@ -68,7 +68,7 @@
                 <div class="form-group">
                     <label class="control-label col-md-2">Attach file</label>
                     <div class="col-md-10">
-                        <input type="file" name="files" multiple class="form-control" placeholder="Drop file here" />
+                        <input type="file" name="uploadFiles" multiple class="form-control" placeholder="Drop file here" />
                     </div>
                 </div>
                 <div class="form-group">
@@ -82,11 +82,6 @@
     </div>
 </div>
 @section scripts{
-    <script>
-        jQuery(document).ready(function () {
-            $('#description textarea').wysihtml5();
-        });
-    </script>
 }
 
 
