--- a/TMS/TMS/Views/Ticket/Index.cshtml
+++ b/TMS/TMS/Views/Ticket/Index.cshtml
@@ -75,6 +75,10 @@
         padding: 8px 20px 8px 20px;
         background-color: #ffffff;
     }
+
+    input {
+        max-width: 500px;
+    }
 </style>
 
 <div class="row">
@@ -88,8 +92,16 @@
             <div class="box-body">
                 <a class="btn btn-primary btn-flat" href="@(Url.Action("Create", "Ticket"))">Create new ticket</a>
                 <div class="pull-right">
-                    <label>Search:</label>
-                    <input type="text" id="search-txt" />
+                    <div class="input-group">
+                        <input type="text" id="search-txt" class="form-control" placeholder="Search...">
+                        <span class="input-group-btn">
+                            <button type="submit" name="search" id="search-btn" class="btn btn-flat">
+                                <i class="fa fa-search"></i>
+                            </button>
+                        </span>
+                    </div>
+                    @*<label>Search:</label>
+                    <input type="text" id="search-txt" />*@
                 </div>
                 <table class="table" id="ticket-table">
                     <thead>
@@ -103,63 +115,6 @@
                     <tbody></tbody>
                 </table>
 
-                <div id="Modal1" class="modal fade" role="dialog">
-                    <div class="modal-dialog modal-lg">
-
-                        <!-- Modal content-->
-                        <div class="modal-content">
-                            <div class="modal-header">
-                                <button type="button" class="close" data-dismiss="modal">&times;</button>
-                                <h4 class="modal-title">Change website main color</h4>
-                            </div>
-                            <div class="modal-body">
-                                <div class="box-body">
-                                    <div class="shortInfoContainer">
-                                        <div class="col-sm-3 shortInfo">
-                                            <h4>Date opened</h4>
-                                            6/8/2016 11:23:00
-                                        </div>
-                                        <div class="col-sm-3 shortInfo">
-                                            <h4>Department</h4>
-                                            Technical support - Website Developer
-                                        </div>
-                                        <div class="col-sm-2 shortInfo">
-                                            <h4>Status</h4>
-                                            Open
-                                        </div>
-                                        <div class="col-sm-3 shortInfo">
-                                            <h4>Last modified</h4>
-                                            8/8/2016 11:23:00
-                                        </div>
-                                    </div>
-                                    <hr />
-                                    <div class="detailContainer">
-                                        <div class="col-lg-12 detail">
-                                            <h4>Ticket Description</h4>
-                                            <p>I wish to change my website's main color to red. The color code is #ff3434. Please email me when my request is solved.</p>
-                                        </div>
-                                        <div class="col-lg-12 detail">
-                                            <h4>Solution</h4>
-                                            <p>Main color is changes to red.</p>
-                                            <p>Thank you for using our services.</p>
-                                            <p><b>Person in charge:</b> Bui Van Loi</p>
-                                            <p>Sent: 8/8/2016 11:23:00</p>
-                                            <div class="rightItems">
-                                                <b>Are you sastified with this solution?</b>
-                                                <a class="btn btn-primary" href="@(Url.Action("ViewTicketList", "Tickets"))">Yes</a>
-                                                <a class="btn btn-default" href="@(Url.Action("ViewTicketList", "Tickets"))">No</a>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="modal-footer">
-                                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                            </div>
-                        </div>
-
-                    </div>
-                </div>
             </div>
         </div>
         <a href="@(Url.Action("Index", "Home"))">
@@ -246,79 +201,6 @@
             reloadDataTable();
         });
 
-        $("#filter-by-status").change(function () {
-            reloadDataTable();
-        });
-
-        $("#ticket-table").on("click", ".view-detail", function () {
-            var id = $(this).attr('data-id'),
-                $modal = $('#detail-modal');
-
-            $.ajax({
-                url: '@Url.Action("GetTicketDetail", "Ticket", new { area=""})',
-                type: "GET",
-                dataType: "json",
-                data: {
-                    id: id
-                },
-                success: function (data) {
-                    var solveUrl = '/Ticket/Solve/' + data.id;
-
-                    $('#ticket-subject').text("Subject: " + data.subject);
-                    $('#ticket-description').text(data.description);
-                    $('#ticket-created-by').text(data.creater);
-                    $('#ticket-assigned-by').text(data.assigner);
-                    $('#ticket-solved-by').text(data.solver);
-                    $('#ticket-type').text(data.type);
-                    $('#ticket-mode').text(data.mode);
-                    $('#ticket-urgency').text(data.urgency);
-                    $('#ticket-priority').text(data.priority);
-                    $('#ticket-category').text(data.category);
-                    $('#ticket-impact').text(data.impact);
-                    $('#ticket-impact-detail').text(data.impactDetail);
-
-
-                    if (data.status == 2) {
-                        $('#ticket-status').text('Assigned');
-                        if (data.solution == "None") {
-                            $('#ticket-solution').empty().append("<p><i>This ticket is not solved yet. Would you like to solve it now? </i>"
-                                                        + "<a class='btn-sm btn-primary' href='" + solveUrl + "'>Yes</a>"
-                                                        + "<a class='btn-sm btn-default' data-toggle='modal' data-dismiss='modal'>No</a></p>");
-                        }
-                        else {
-                            $('#ticket-solution').empty().append("<p>" + data.solution + "</p>");
-                        }
-                    }
-                    else {
-                        if (data.status == 3) {
-                            $('#ticket-status').text('Solved');
-                        } else if (data.status == 4) {
-                            $('#ticket-status').text('Unapproved');
-                        } else if (data.status == 5) {
-                            $('#ticket-status').text('Cancelled');
-                        } else if (data.status == 6) {
-                            $('#ticket-status').text('Closed');
-                        }
-                        $('#ticket-solution').empty().append("<p>" + data.solution + "</p>");
-                    }
-
-                    $('#ticket-created-date').text(data.createdDate);
-                    $('#ticket-modified-date').text(data.lastModified);
-                    $('#ticket-schedule-start').text(data.scheduleStart);
-                    $('#ticket-schedule-end').text(data.scheduleEnd);
-                    $('#ticket-actual-start').text(data.actualStart);
-                    $('#ticket-actual-end').text(data.actualEnd);
-
-                    $('#ticket-solveUser').text(data.solveUser);
-
-                    $modal.modal("show");
-                },
-                failure: function (data) {
-                    alert(data.d);
-                }
-            });
-
-        });
     </script>
 }
 
