--- a/TMS/TMS/Areas/Admin/Views/ManageSC/Category.cshtml
+++ b/TMS/TMS/Areas/Admin/Views/ManageSC/Category.cshtml
@@ -23,9 +23,9 @@
     <div class="col-xs-12">
         <div class="box box-primary large-text-container">
             <div class="box-body">
-                <a href="javascript:void(0)" class="btn btn-primary" onclick="showCreateCategoryModal()"><i class="fa fa-plus"></i> New Category</a>
-                <a href="javascript:void(0)" class="btn btn-primary" onclick="showCreateSubCategoryModal()"><i class="fa fa-plus"></i> New Sub Category</a>
-                <a href="javascript:void(0)" class="btn btn-primary" onclick="showCreateItemModal()"><i class="fa fa-plus"></i> New Item</a>
+                <a href="javascript:void(0)" class="btn btn-flat btn-primary" onclick="showCreateCategoryModal()"><i class="fa fa-plus"></i> New Category</a>
+                <a href="javascript:void(0)" class="btn btn-flat btn-primary" onclick="showCreateSubCategoryModal()"><i class="fa fa-plus"></i> New Sub Category</a>
+                <a href="javascript:void(0)" class="btn btn-flat btn-primary" onclick="showCreateItemModal()"><i class="fa fa-plus"></i> New Item</a>
                 <table class="table table-bordered dataTable" id="category-table">
                     <thead>
                         <tr>
@@ -131,14 +131,14 @@
                     <div class="form-group">
                         <label class="col-sm-3 control-label">Name&nbsp;<span style="color: red">*</span></label>
                         <div class="col-sm-9">
-                            <input type="text" class="form-control" placeholder="Name" id="sub-category-name-txt">
+                            <input type="text" class="form-control" placeholder="Name" id="item-name-txt">
                             <p id="item-name-validation-message" class="text-danger" style="display: none"></p>
                         </div>
                     </div>
                     <div class="form-group">
                         <label class="col-sm-3 control-label">Description</label>
                         <div class="col-sm-9">
-                            <textarea class="form-control" rows="3" placeholder="Description" id="sub-category-description-txt"></textarea>
+                            <textarea class="form-control" rows="3" placeholder="Description" id="item-description-txt"></textarea>
                         </div>
                     </div>
                     <div class="form-group">
@@ -219,7 +219,7 @@
                     "targets": [3],
                     "sortable": false,
                     "render": function (data, type, row) {
-                        return '<a href="javascript:void(0)" class="btn btn-xs btn-primary" onclick="showCategoryModal(\'' + row.ID + '\')"><i class="fa fa-pencil"></i></a>&nbsp;&nbsp;'
+                        return '<a href="javascript:void(0)" class="btn btn-xs btn-primary" onclick="showEditCategoryModal(\'' + row.ID + '\')"><i class="fa fa-pencil"></i></a>&nbsp;&nbsp;'
                             + '<a href="javascript:void(0)" class="btn btn-xs btn-primary" onclick="showDeleteModal(\'' + row.ID + '\')"><i class="fa fa-trash-o"></i></a>';
                     }
 
@@ -235,7 +235,6 @@
         $('#category-table tbody').on('click', 'td.details-control', function () {
             var tr = $(this).closest('tr');
             var table = $(this).closest('table');
-            //var row = $("#category-table").dataTable().api().row(tr);
             var row = table.dataTable().api().row(tr);
 
             if (row.child.isShown()) {
@@ -248,10 +247,9 @@
                 var level = row.data().Level;
                 var categories = row.data().Categories;
                 if (categories.length > 0) {
-                    // Open this row
                     if (level == '@ConstantUtil.CategoryLevel.Category') {
                         var content = "<div class='slider'>";
-                        content += "<h3>Sub Categories</h3>";
+                        content += "<h3 style='margin: 10px 0px'>Sub Categories</h3>";
                         content += "<table class='table table-bordered dataTable cell-border'>";
                         content += "<thead>";
                         content += "<tr>";
@@ -304,7 +302,7 @@
                                     "targets": [3],
                                     "sortable": false,
                                     "render": function (data, type, row) {
-                                        return '<a href="javascript:void(0)" class="btn btn-xs btn-primary" onclick="showSubCategoryModal(\'' + row.ID + '\')"><i class="fa fa-pencil"></i></a>&nbsp;&nbsp;'
+                                        return '<a href="javascript:void(0)" class="btn btn-xs btn-primary" onclick="showEditSubCategoryModal(\'' + row.ID + '\')"><i class="fa fa-pencil"></i></a>&nbsp;&nbsp;'
                                             + '<a href="javascript:void(0)" class="btn btn-xs btn-primary" onclick="showDeleteModal(\'' + row.ID + '\')"><i class="fa fa-trash-o"></i></a>';
                                     }
                                 }
@@ -313,7 +311,7 @@
                         tr.next().css("background-color", "#f7f7f7");
                     } else if (level == '@ConstantUtil.CategoryLevel.SubCategory') {
                         var content = "<div class='slider'>";
-                        content += "<h3>Items</h3>";
+                        content += "<h3 style='margin: 10px 0px'>Items</h3>";
                         content += "<table class='table table-bordered dataTable'>";
                         content += "<thead>";
                         content += "<tr>";
@@ -355,7 +353,7 @@
                                     "targets": [2],
                                     "sortable": false,
                                     "render": function (data, type, row) {
-                                        return '<a href="javascript:void(0)" class="btn btn-xs btn-primary" onclick="showItemModal(\'' + row.ID + '\')"><i class="fa fa-pencil"></i></a>&nbsp;&nbsp;'
+                                        return '<a href="javascript:void(0)" class="btn btn-xs btn-primary" onclick="showEditItemModal(\'' + row.ID + '\')"><i class="fa fa-pencil"></i></a>&nbsp;&nbsp;'
                                             + '<a href="javascript:void(0)" class="btn btn-xs btn-primary" onclick="showDeleteModal(\'' + row.ID + '\')"><i class="fa fa-trash-o"></i></a>';
                                     }
 
@@ -364,8 +362,7 @@
                         });
                         tr.next().css("background-color", "#f0f0f0");
                     }
-                }
-                else {
+                } else {
                     if (level == '@ConstantUtil.CategoryLevel.Category') {
                         var content = "<div class='slider'><h3>No sub category available</h3></div>";
                         row.child(content).show();
@@ -386,11 +383,11 @@
             $(".modal").find("input").val("");
             $(".modal").find("textarea").val("");
             $(".modal").find(".text-danger").hide();
-        }
+        };
 
         var clearValidationError = function () {
             $(".modal").find(".text-danger").hide();
-        }
+        };
 
         var showCreateCategoryModal = function () {
             clearModal();
@@ -504,7 +501,7 @@
                     type: "POST",
                     data: {
                         Name: name,
-                        Description: $("#category-description-txt").val(),
+                        Description: $("#sub-category-description-txt").val(),
                         ParentId: category
                     },
                     success: function (data) {
@@ -528,10 +525,57 @@
             }
         };
 
-        var getImpactDetail = function (id) {
+        var createItem = function () {
+            clearValidationError();
+            var name = $("#item-name-txt").val();
+            var sub_category = $("#item-sub-category-dropdown").val();
+            var valid = true;
+            if (name.trim() === "") {
+                $("#item-name-validation-message").html("Name is required!");
+                $("#item-name-validation-message").show();
+                valid = false;
+            }
+            if (sub_category === "") {
+                $("#item-sub-category-validation-message").html("Sub Category is required!");
+                $("#item-sub-category-validation-message").show();
+                valid = false;
+            }
+
+            if (valid) {
+                $.ajax({
+                    url: "/Admin/ManageSC/CreateItem",
+                    dataType: "json",
+                    type: "POST",
+                    data: {
+                        Name: name,
+                        Description: $("#item-description-txt").val(),
+                        ParentId: sub_category
+                    },
+                    success: function (data) {
+                        if (data.success) {
+                            $.notify(data.message, "success");
+                            $("#item-modal").modal("hide");
+                            reloadDataTable();
+                        } else {
+                            if (data.error) {
+                                $.notify(data.message, "error");
+                            } else {
+                                $("#item-name-validation-message").html(data.message);
+                                $("#item-name-validation-message").show();
+                            }
+                        }
+                    },
+                    error: function () {
+                        $.notify("Cannot connect to server!", "error");
+                    }
+                });
+            }
+        };
+
+        var showEditCategoryModal = function (id) {
             clearModal();
             $.ajax({
-                url: "/Admin/ManageSC/GetImpactDetail",
+                url: "/Admin/ManageSC/GetCategoryDetail",
                 dataType: "json",
                 type: "GET",
                 data: {
@@ -539,10 +583,10 @@
                 },
                 success: function (data) {
                     if (data.success) {
-                        $("#myModal").modal("show");
-                        $("#name-txt").val(data.name);
-                        $("#description-txt").val(data.description);
-                        $("#create-btn").attr("onclick", "editImpact('" + id + "')");
+                        $('#category-action-btn').attr("onclick", "editCategory('" + id + "')");
+                        $("#category-name-txt").val(data.name);
+                        $("#category-description-txt").val(data.description);
+                        $("#category-modal").modal('show');
                     } else {
                         if (data.error) {
                             $.notify(data.message, "error");
@@ -553,6 +597,158 @@
                     $.notify("Cannot connect to server!", "error");
                 }
             });
+        };
+
+        var showEditSubCategoryModal = function (id) {
+            clearModal();
+            $.ajax({
+                url: "/Admin/ManageSC/GetSubCategoryDetail",
+                dataType: "json",
+                type: "GET",
+                data: {
+                    id: id
+                },
+                success: function (data) {
+                    if (data.success) {
+                        var content = '<option value>--Select Category--</option>';
+                        for (i = 0; i < data.categories.length; i++) {
+                            var row = data.categories[i];
+                            content += '<option value="' + row.ID + '">' + row.Name + '</option>';
+                        }
+                        $("#sub-category-category-dropdown").html(content);
+                        $("#sub-category-category-dropdown").val(data.parentId);
+                        $("#sub-category-name-txt").val(data.name);
+                        $("#sub-category-description-txt").val(data.description);
+                        $('#sub-category-action-btn').attr("onclick", "editSubCategory('" + id + "')");
+                        $("#sub-category-modal").modal('show');
+                    } else {
+                        $.notify(data.message, "error");
+                    }
+                },
+                error: function () {
+                    $.notify("Cannot connect to server!", "error");
+                }
+            });
+        };
+
+        var showEditItemModal = function (id) {
+            clearModal();
+            $.ajax({
+                url: "/Admin/ManageSC/GetItemDetail",
+                dataType: "json",
+                type: "GET",
+                data: {
+                    id: id
+                },
+                success: function (data) {
+                    if (data.success) {
+                        var content = '<option value>--Select Sub Category--</option>';
+                        for (i = 0; i < data.categories.length; i++) {
+                            var row = data.categories[i];
+                            content += '<option value="' + row.ID + '">' + row.Name + '</option>';
+                        }
+                        $("#item-sub-category-dropdown").html(content);
+                        $("#item-sub-category-dropdown").val(data.parentId);
+                        $("#item-name-txt").val(data.name);
+                        $("#item-description-txt").val(data.description);
+                        $('#item-action-btn').attr("onclick", "editItem('" + id + "')");
+                        $("#item-modal").modal('show');
+                    } else {
+                        $.notify(data.message, "error");
+                    }
+                },
+                error: function () {
+                    $.notify("Cannot connect to server!", "error");
+                }
+            });
+        };
+
+        var editCategory = function (id) {
+            clearValidationError();
+            var name = $("#category-name-txt").val();
+            var valid = true;
+            if (name.trim() === "") {
+                $("#category-name-validation-message").html("Name is required!");
+                $("#category-name-validation-message").show();
+                valid = false;
+            }
+            if (valid) {
+                $.ajax({
+                    url: "/Admin/ManageSC/EditCategory",
+                    dataType: "json",
+                    type: "POST",
+                    data: {
+                        ID: id,
+                        Name: name,
+                        Description: $("#category-description-txt").val()
+                    },
+                    success: function (data) {
+                        if (data.success) {
+                            $.notify(data.message, "success");
+                            $("#category-modal").modal("hide");
+                            reloadDataTable();
+                        } else {
+                            if (data.error) {
+                                $.notify(data.message, "error");
+                            } else {
+                                $("#category-name-validation-message").html(data.message);
+                                $("#category-name-validation-message").show();
+                            }
+                        }
+                    },
+                    error: function () {
+                        $.notify("Cannot connect to server!", "error");
+                    }
+                });
+            }
+        };
+
+        var editSubCategory = function (id) {
+            clearValidationError();
+            var name = $("#sub-category-name-txt").val();
+            var category = $("#sub-category-category-dropdown").val();
+            var valid = true;
+            if (name.trim() === "") {
+                $("#sub-category-name-validation-message").html("Name is required!");
+                $("#sub-category-name-validation-message").show();
+                valid = false;
+            }
+            if (category === "") {
+                $("#sub-category-category-validation-message").html("Category is required!");
+                $("#sub-category-category-validation-message").show();
+                valid = false;
+            }
+
+            if (valid) {
+                $.ajax({
+                    url: "/Admin/ManageSC/EditSubCategory",
+                    dataType: "json",
+                    type: "POST",
+                    data: {
+                        ID: id,
+                        Name: name,
+                        Description: $("#sub-category-description-txt").val(),
+                        ParentId: category
+                    },
+                    success: function (data) {
+                        if (data.success) {
+                            $.notify(data.message, "success");
+                            $("#sub-category-modal").modal("hide");
+                            reloadDataTable();
+                        } else {
+                            if (data.error) {
+                                $.notify(data.message, "error");
+                            } else {
+                                $("#sub-category-name-validation-message").html(data.message);
+                                $("#sub-category-name-validation-message").show();
+                            }
+                        }
+                    },
+                    error: function () {
+                        $.notify("Cannot connect to server!", "error");
+                    }
+                });
+            }
         };
 
         var editImpact = function (id) {
