--- a/TMS/TMS/Areas/Admin/Views/ManageUser/Requester.cshtml
+++ b/TMS/TMS/Areas/Admin/Views/ManageUser/Requester.cshtml
@@ -18,7 +18,7 @@
     <div class="col-xs-12">
         <div class="box box-primary">
             <div class="box-body large-text-container">
-                <p>@Html.ActionLink("Create New", "CreateRequester", null, new { @class = "btn btn-success" })</p>
+                <a href="/Admin/ManageUser/CreateRequester" class="btn btn-flat btn-primary"><i class="fa fa-plus"></i> New Requester</a>
                 <div class="pull-right" style="margin-right: 20px">
                     <label>Availability:</label>
                     <select id="availability-dropdown">
