--- a/TMS/TMS/Areas/HelpDesk/Views/ManageTicket/Index.cshtml
+++ b/TMS/TMS/Areas/HelpDesk/Views/ManageTicket/Index.cshtml
@@ -193,7 +193,7 @@
                                 <div class="col-sm-4 labels">
                                     <b>Attachment: </b>
                                 </div>
-                                <div class="col-sm-8"><span id="ticket-attachment">None</span></div>
+                                <div class="col-sm-8"><span id="ticket-attachment">-</span></div>
                             </div>
                             <div class="col-sm-6">
                                 <div class="col-sm-4 labels">
