--- a/TMS/TMS/Areas/HelpDesk/Views/ManageTicket/EditTicket.cshtml
+++ b/TMS/TMS/Areas/HelpDesk/Views/ManageTicket/EditTicket.cshtml
@@ -109,7 +109,7 @@
                                     <input class="form-control text-box single-line" id="requesterName" name="Requester" type="text" value="" readonly>
                                 </div>
                                 <div class="col-md-2">
-                                    <a href="javascript:showRequester()"><img style="margin-left:-15px" class="userslookup" src="~/Content/img/add-requester-icon.ico" /></a>
+                                    <a href="javascript:showRequester()"><img class="userslookup" src="~/Content/img/add-requester-icon.ico" /></a>
                                 </div>
                             </div>
                             <div class="form-group">
