--- a/TMS/TMS/Areas/HelpDesk/Views/ManageTicket/CreateNewTicket.cshtml
+++ b/TMS/TMS/Areas/HelpDesk/Views/ManageTicket/CreateNewTicket.cshtml
@@ -12,145 +12,156 @@
             <!-- /.box-header -->
             <div class="box-body">
                 <form class="form-horizontal" role="form" id="form-new-ticket" method="POST">
-                    <div class="form-group">
-                        <label class="control-label col-md-2">Subject <font color="red">*</font></label>
-                        <div class="col-md-10">
-                            <input type="text" class="form-control" name="Subject" placeholder="Subject" />
-                        </div>
-                    </div>
-                    
-                    <div class="form-group">
-                        <label class="control-label col-md-2">Mode <font color="red">*</font></label>
-                        <div class="col-md-10">
-                            <select class="form-control" name="Mode">
-                                <option value="0">None</option>
-                                <option value="1">PhoneCall</option>
-                                <option value="2">WebForm</option>
-                                <option value="3">Email</option>
-                            </select>
-                        </div>
-                    </div>
-
-                    <div class="form-group">
-                        <label class="control-label col-md-2">Type</label>
-                        <div class="col-md-10">
-                            <select class="form-control" name="Type">
-                                <option value="0">None</option>
-                                <option value="1">Request</option>
-                                <option value="2">Problem</option>
-                                <option value="3">Change</option>
-                            </select>
-                        </div>
-                    </div>
-                    
-                    <div class="form-group">
-                        <label class="control-label col-md-2">Description</label>
-                        <div class="col-md-10">
-                            <textarea class="form-control textarea" id="descriptionEditor" name="Description" placeholder="Description" cols="3"></textarea>
-                        </div>
-                    </div>
-                    <div class="form-group">
-                        <label class="control-label col-md-2"></label>
-                        <div class="col-md-10">
-                            <input class="form-control" type="file" name="descriptionFiles" multiple>
-                            @*<div class="btn btn-default btn-file">
-                                <i class="fa fa-paperclip"></i> Attachment
-                                <input type="file" name="file" multiple>
-                            </div>*@
-                        </div>
-                    </div>
-                    <div class="form-group">
-                        <label class="control-label col-md-2">Urgency</label>
-                        <div class="col-md-10">
-                            <select class="form-control" name="UrgencyId" data-role="ddl-urgency"></select>
-                        </div>
-                    </div>
-                    <div class="form-group">
-                        <label class="control-label col-md-2">Priority</label>
-                        <div class="col-md-10">
-                            <select class="form-control" name="PriorityId" data-role="ddl-priority"></select>
-                        </div>
-                    </div>
-                    <div class="form-group">
-                        <label class="control-label col-md-2">Category</label>
-                        <div class="col-md-10">
-                            <select class="form-control" name="CategoryId" data-role="ddl-category"></select>
-                        </div>
-                    </div>
-                    <div class="form-group">
-                        <label class="control-label col-md-2">Impact</label>
-                        <div class="col-md-10">
-                            <select class="form-control" name="ImpactId" data-role="ddl-impact"></select>
-                        </div>
-                    </div>
-                    <div class="form-group">
-                        <label class="control-label col-md-2">Impact Detail</label>
-                        <div class="col-md-10">
-                            <textarea class="form-control" name="ImpactDetail" placeholder="Impact Detail" cols="3"></textarea>
-                        </div>
-                    </div>
-                    <div class="form-group">
-                        <label class="control-label col-md-2">Department</label>
-                        <div class="col-md-10">
-                            <select class="form-control" name="DepartmentId" data-role="ddl-department"></select>
-                        </div>
-                    </div>
-                    <div class="form-group">
-                        <label class="control-label col-md-2">Technician</label>
-                        <div class="col-md-10">
-                            <select class="form-control" name="Technician" data-role="ddl-technician"></select>
-                        </div>
-                    </div>
-                    <div class="form-group">
-                        <label class="control-label col-md-2">Requester <font color="red">*</font></label>
-                        <div class="col-md-4">
-                            <input type="hidden" id="requesterId" name="RequesterId">
-                            <input class="form-control text-box single-line" id="requesterName" name="Requester" type="text" value="" readonly>
-                        </div>
+                    <div class="row">
                         <div class="col-md-6">
-                            <a href="javascript:showRequester()"><img class="userslookup" src="~/Content/img/add-requester-icon.ico" /></a>
+                            <div class="form-group">
+                                <label class="control-label col-md-3">Subject <font color="red">*</font></label>
+                                <div class="col-md-9">
+                                    <input type="text" class="form-control" name="Subject" placeholder="Subject" />
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <label class="control-label col-md-3">Mode <font color="red">*</font></label>
+                                <div class="col-md-9">
+                                    <select class="form-control" name="Mode">
+                                        <option value="0">None</option>
+                                        <option value="1">PhoneCall</option>
+                                        <option value="2">WebForm</option>
+                                        <option value="3">Email</option>
+                                    </select>
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <label class="control-label col-md-3">Type</label>
+                                <div class="col-md-9">
+                                    <select class="form-control" name="Type">
+                                        <option value="0">None</option>
+                                        <option value="1">Request</option>
+                                        <option value="2">Problem</option>
+                                        <option value="3">Change</option>
+                                    </select>
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <label class="control-label col-md-3">Description</label>
+                                <div class="col-md-9">
+                                    <textarea class="form-control textarea" id="descriptionEditor" name="Description" placeholder="Description" cols="3"></textarea>
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <label class="control-label col-md-3"></label>
+                                <div class="col-md-9">
+                                    <input class="form-control" type="file" name="descriptionFiles" multiple>
+                                    @*<div class="btn btn-default btn-file">
+                                            <i class="fa fa-paperclip"></i> Attachment
+                                            <input type="file" name="file" multiple>
+                                        </div>*@
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-6" style="margin-left: -30px;">
+                            <div class="form-group">
+                                <label class="control-label col-md-4">Urgency</label>
+                                <div class="col-md-8">
+                                    <select class="form-control" name="UrgencyId" data-role="ddl-urgency"></select>
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <label class="control-label col-md-4">Priority</label>
+                                <div class="col-md-8">
+                                    <select class="form-control" name="PriorityId" data-role="ddl-priority"></select>
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <label class="control-label col-md-4">Category</label>
+                                <div class="col-md-8">
+                                    <select class="form-control" name="CategoryId" data-role="ddl-category"></select>
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <label class="control-label col-md-4">Impact</label>
+                                <div class="col-md-8">
+                                    <select class="form-control" name="ImpactId" data-role="ddl-impact"></select>
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <label class="control-label col-md-4">Impact Detail</label>
+                                <div class="col-md-8">
+                                    <textarea class="form-control" name="ImpactDetail" placeholder="Impact Detail" cols="3"></textarea>
+                                </div>
+                            </div>
                         </div>
                     </div>
-                    <div class="form-group">
-                        <label class="control-label col-md-2">Schedule Start Date</label>
-                        <div class="col-md-10">
-                            <input type="text" class="form-control datetime" name="ScheduleStartDate" />
-                        </div>
-                    </div>
-                    <div class="form-group">
-                        <label class="control-label col-md-2">Schedule End Date</label>
-                        <div class="col-md-10">
-                            <input type="text" class="form-control datetime" name="ScheduleEndDate" />
-                        </div>
-                    </div>
-                    <div class="form-group">
-                        <label class="control-label col-md-2">Solution</label>
-                        <div class="col-md-10">
-                            <textarea class="form-control textarea" id="solutionEditor" name="Solution" placeholder="" cols="3"></textarea>
-                        </div>
-                    </div>
-                    <div class="form-group">
-                        <label class="control-label col-md-2"></label>
-                        <div class="col-md-10">
-                            <input class="form-control" type="file" name="solutionFiles" multiple>
+                    <div class="row">
+                        <div class="col-md-6">
+                            <div class="form-group">
+                                <label class="control-label col-md-3">Requester <font color="red">*</font></label>
+                                <div class="col-md-7">
+                                    <input type="hidden" id="requesterId" name="RequesterId">
+                                    <input class="form-control text-box single-line" id="requesterName" name="Requester" type="text" value="" readonly>
+                                </div>
+                                <div class="col-md-2">
+                                    <a href="javascript:showRequester()"><img class="userslookup" src="~/Content/img/add-requester-icon.ico" /></a>
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <label class="control-label col-md-3">Department</label>
+                                <div class="col-md-9">
+                                    <select class="form-control" name="DepartmentId" data-role="ddl-department"></select>
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <label class="control-label col-md-3">Technician</label>
+                                <div class="col-md-9">
+                                    <select class="form-control" name="Technician" data-role="ddl-technician"></select>
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <label class="control-label col-md-3">Solution</label>
+                                <div class="col-md-9">
+                                    <textarea class="form-control textarea" id="solutionEditor" name="Solution" placeholder="" cols="3"></textarea>
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <label class="control-label col-md-3"></label>
+                                <div class="col-md-9">
+                                    <input class="form-control" type="file" name="solutionFiles" multiple>
 
-                            @*<div class="btn btn-default btn-file">
-                                <i class="fa fa-paperclip"></i> Attachment
-                                <input type="file" name="file" multiple>
-                            </div>*@
+                                    @*<div class="btn btn-default btn-file">
+                                            <i class="fa fa-paperclip"></i> Attachment
+                                            <input type="file" name="file" multiple>
+                                        </div>*@
+                                </div>
+                            </div>
+
+                        </div>
+                        <div class="col-md-6" style="margin-left: -30px;">
+                            <div class="form-group">
+                                <label class="control-label col-md-4">Schedule Start Date</label>
+                                <div class="col-md-8">
+                                    <input type="text" class="form-control datetime" name="ScheduleStartDate" />
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <label class="control-label col-md-4">Schedule End Date</label>
+                                <div class="col-md-8">
+                                    <input type="text" class="form-control datetime" name="ScheduleEndDate" />
+                                </div>
+                            </div>
                         </div>
                     </div>
-                    <div class="form-group">
-                        <label class="control-label col-md-2"></label>
-                        <div class="col-md-10">
-                            <div class="form-error-messages" data-role="group-form-error"></div>
+                    <div class="row">
+                        <div class="form-group">
+                            <label class="control-label col-md-2"></label>
+                            <div class="col-md-10">
+                                <div class="form-error-messages" data-role="group-form-error"></div>
+                            </div>
                         </div>
                     </div>
                 </form>
-                <div class="form-group">
-                    <label class="control-label col-md-2"></label>
-                    <div class="col-md-10 pull-left">
-                        <input type="submit" value="Save" data-role="btn-submit-new-ticket" class="btn btn-default bg-olive btn-flat" />
+                <div class="row">
+                    <div class="form-group " style="text-align: center;">
+                        <input type="button" value="Save" data-role="btn-submit-new-ticket" class="btn btn-default bg-olive btn-flat" />
                         <input type="button" value="Cancel" data-role="btn-cancel" class="btn btn-default bg-olive btn-flat" />
                     </div>
                 </div>
@@ -215,7 +226,7 @@
 
         $("[data-role=btn-cancel]")
             .on("click",
-                function() {
+                function () {
                     window.location.href = "/HelpDesk/ManageTicket";
                 });
 
