--- a/TMS/TMS/Areas/HelpDesk/Views/ManageTicket/CreateNewTicket.cshtml
+++ b/TMS/TMS/Areas/HelpDesk/Views/ManageTicket/CreateNewTicket.cshtml
@@ -162,7 +162,7 @@
                 <div class="row">
                     <div class="form-group " style="text-align: center;">
                         <input type="button" value="Save" data-role="btn-submit-new-ticket" class="btn btn-default bg-olive btn-flat" />
-                        <input type="button" value="Cancel" data-role="btn-cancel" class="btn btn-default bg-olive btn-flat" />
+                        <input type="button" value="Cancel" data-role="btn-cancel" class="btn btn-default btn-flat" />
                     </div>
                 </div>
             </div>
