--- a/TMS/TMS/Areas/HelpDesk/Views/ManageTicket/EditTicket.cshtml
+++ b/TMS/TMS/Areas/HelpDesk/Views/ManageTicket/EditTicket.cshtml
@@ -215,7 +215,7 @@
                     <div class="row">
                         <div class="form-group " style="text-align: center;">
                             <input type="button" value="Update" data-role="btn-update-ticket" class="btn btn-default bg-olive btn-flat" />
-                            <input type="button" value="Cancel" data-role="btn-cancel" class="btn btn-default bg-olive btn-flat" />
+                            <input type="button" value="Cancel" data-role="btn-cancel" class="btn btn-default btn-flat" />
                         </div>
                     </div>
                 </form>
